// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrawerWraper is working properly 1`] = `
<div
  class="drawer-pf drawer-alt-pf drawer-pf-notifications drawer-pf-expanded"
>
  <div
    class="drawer-pf-title"
  >
    <a
      class="drawer-pf-toggle-expand"
    />
    <a
      class="drawer-pf-close"
    >
      <span
        aria-hidden="true"
        class="fa fa-close"
      />
    </a>
    <h3
      class="text-center"
    >
      Notifications
    </h3>
  </div>
  <div
    class="panel-group"
    id="notification-drawer-accordion"
  >
    <div
      class="panel panel-default"
    >
      <div
        class="panel-heading"
      >
        <h4
          class="panel-title"
        >
          <a
            class="collapsed"
          >
            Notification Tab 1
          </a>
        </h4>
        <span
          class="panel-counter"
        >
          2 Unread Events
        </span>
      </div>
      <div
        class="panel-collapse collapse"
        id="1"
      >
        <div
          class="panel-body"
        >
          <div
            class="drawer-pf-notification unread"
          >
            <div
              class="dropdown pull-right dropdown-kebab-pf dropdown btn-group"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn btn-link"
                id="0"
                role="button"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="fa fa-ellipsis-v"
                />
              </button>
              <ul
                aria-labelledby="0"
                class="dropdown-menu-right dropdown-menu"
                role="menu"
              >
                <li
                  class=""
                  role="presentation"
                >
                  <a
                    href="#"
                    id="notification-kebab-0"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Open
                  </a>
                </li>
                <li
                  class="divider"
                  role="separator"
                />
                <li
                  class=""
                  role="presentation"
                >
                  <a
                    href="#"
                    id="notification-kebab-hide"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Hide this notification
                  </a>
                </li>
              </ul>
            </div>
            <span
              aria-hidden="true"
              class="pficon pficon-info pull-left"
            />
            <div
              class="drawer-pf-notification-content"
            >
              <span
                class="drawer-pf-notification-message"
              >
                Foreman Community Newsletter - January 2019
              </span>
              <div
                class="drawer-pf-notification-info"
              >
                <span
                  class="date"
                >
                  Invalid Date
                </span>
                <span
                  class="time"
                >
                  Invalid Date
                </span>
              </div>
            </div>
          </div>
          <div
            class="drawer-pf-notification"
          >
            <div
              class="dropdown pull-right dropdown-kebab-pf dropdown btn-group"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn btn-link"
                id="1"
                role="button"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="fa fa-ellipsis-v"
                />
              </button>
              <ul
                aria-labelledby="1"
                class="dropdown-menu-right dropdown-menu"
                role="menu"
              >
                <li
                  class=""
                  role="presentation"
                >
                  <a
                    href="#"
                    id="notification-kebab-0"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Open
                  </a>
                </li>
                <li
                  class="divider"
                  role="separator"
                />
                <li
                  class=""
                  role="presentation"
                >
                  <a
                    href="#"
                    id="notification-kebab-hide"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Hide this notification
                  </a>
                </li>
              </ul>
            </div>
            <span
              aria-hidden="true"
              class="pficon pficon-warning-triangle-o pull-left"
            />
            <div
              class="drawer-pf-notification-content"
            >
              <span
                class="drawer-pf-notification-message"
              >
                Foreman Community Newsletter - January 2019
              </span>
            </div>
          </div>
          <div
            class="drawer-pf-notification"
          >
            <div
              class="dropdown pull-right dropdown-kebab-pf dropdown btn-group"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn btn-link"
                id="2"
                role="button"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="fa fa-ellipsis-v"
                />
              </button>
              <ul
                aria-labelledby="2"
                class="dropdown-menu-right dropdown-menu"
                role="menu"
              >
                <li
                  class=""
                  role="presentation"
                >
                  <a
                    href="#"
                    id="notification-kebab-0"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Open
                  </a>
                </li>
                <li
                  class="divider"
                  role="separator"
                />
                <li
                  class=""
                  role="presentation"
                >
                  <a
                    href="#"
                    id="notification-kebab-hide"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Hide this notification
                  </a>
                </li>
              </ul>
            </div>
            <span
              aria-hidden="true"
              class="pficon pficon-ok pull-left"
            />
            <div
              class="drawer-pf-notification-content"
            >
              <span
                class="drawer-pf-notification-message"
              >
                Foreman Community Newsletter - January 2029
              </span>
            </div>
          </div>
          <div
            class="drawer-pf-notification unread"
          >
            <div
              class="dropdown pull-right dropdown-kebab-pf dropdown btn-group"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn btn-link"
                id="3"
                role="button"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="fa fa-ellipsis-v"
                />
              </button>
              <ul
                aria-labelledby="3"
                class="dropdown-menu-right dropdown-menu"
                role="menu"
              >
                <li
                  class=""
                  role="presentation"
                >
                  <a
                    href="#"
                    id="notification-kebab-0"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Open
                  </a>
                </li>
                <li
                  class="divider"
                  role="separator"
                />
                <li
                  class=""
                  role="presentation"
                >
                  <a
                    href="#"
                    id="notification-kebab-hide"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Hide this notification
                  </a>
                </li>
              </ul>
            </div>
            <span
              aria-hidden="true"
              class="pficon pficon-error-circle-o pull-left"
            />
            <div
              class="drawer-pf-notification-content"
            >
              <span
                class="drawer-pf-notification-message"
              >
                Foreman Community Newsletter - January 2029
              </span>
            </div>
          </div>
        </div>
        <div
          class="drawer-pf-action"
        >
          <div
            class="drawer-pf-action-link drawer-pf-action-link"
            data-toggle="mark-all-read"
          >
            <button
              class="btn btn-link"
              type="button"
            >
              Mark All Read
            </button>
          </div>
          <div
            class="drawer-pf-action-link"
            data-toggle="clear-all"
          >
            <button
              class="btn btn-link"
              type="button"
            >
              <span
                aria-hidden="true"
                class="pficon pficon-close"
              />
              Clear All
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NotificationDrawerPanelWraper is working properly 1`] = `
<div
  class="panel panel-default expanded"
>
  <div
    class="panel-heading"
  >
    <h4
      class="panel-title"
    >
      <a
        class=""
      >
        panelName
      </a>
    </h4>
    <span
      class="panel-counter"
    >
      2 Unread Events
    </span>
  </div>
  <div
    class="panel-collapse collapse in"
    id="1"
  >
    <div
      class="panel-body"
    >
      <div
        class="drawer-pf-notification unread"
      >
        <div
          class="dropdown pull-right dropdown-kebab-pf dropdown btn-group"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="dropdown-toggle btn btn-link"
            id="0"
            role="button"
            type="button"
          >
            <span
              aria-hidden="true"
              class="fa fa-ellipsis-v"
            />
          </button>
          <ul
            aria-labelledby="0"
            class="dropdown-menu-right dropdown-menu"
            role="menu"
          >
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                id="notification-kebab-0"
                role="menuitem"
                tabindex="-1"
              >
                Open
              </a>
            </li>
            <li
              class="divider"
              role="separator"
            />
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                id="notification-kebab-hide"
                role="menuitem"
                tabindex="-1"
              >
                Hide this notification
              </a>
            </li>
          </ul>
        </div>
        <span
          aria-hidden="true"
          class="pficon pficon-info pull-left"
        />
        <div
          class="drawer-pf-notification-content"
        >
          <span
            class="drawer-pf-notification-message"
          >
            Foreman Community Newsletter - January 2019
          </span>
          <div
            class="drawer-pf-notification-info"
          >
            <span
              class="date"
            >
              Invalid Date
            </span>
            <span
              class="time"
            >
              Invalid Date
            </span>
          </div>
        </div>
      </div>
      <div
        class="drawer-pf-notification"
      >
        <div
          class="dropdown pull-right dropdown-kebab-pf dropdown btn-group"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="dropdown-toggle btn btn-link"
            id="1"
            role="button"
            type="button"
          >
            <span
              aria-hidden="true"
              class="fa fa-ellipsis-v"
            />
          </button>
          <ul
            aria-labelledby="1"
            class="dropdown-menu-right dropdown-menu"
            role="menu"
          >
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                id="notification-kebab-0"
                role="menuitem"
                tabindex="-1"
              >
                Open
              </a>
            </li>
            <li
              class="divider"
              role="separator"
            />
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                id="notification-kebab-hide"
                role="menuitem"
                tabindex="-1"
              >
                Hide this notification
              </a>
            </li>
          </ul>
        </div>
        <span
          aria-hidden="true"
          class="pficon pficon-warning-triangle-o pull-left"
        />
        <div
          class="drawer-pf-notification-content"
        >
          <span
            class="drawer-pf-notification-message"
          >
            Foreman Community Newsletter - January 2019
          </span>
        </div>
      </div>
      <div
        class="drawer-pf-notification"
      >
        <div
          class="dropdown pull-right dropdown-kebab-pf dropdown btn-group"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="dropdown-toggle btn btn-link"
            id="2"
            role="button"
            type="button"
          >
            <span
              aria-hidden="true"
              class="fa fa-ellipsis-v"
            />
          </button>
          <ul
            aria-labelledby="2"
            class="dropdown-menu-right dropdown-menu"
            role="menu"
          >
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                id="notification-kebab-0"
                role="menuitem"
                tabindex="-1"
              >
                Open
              </a>
            </li>
            <li
              class="divider"
              role="separator"
            />
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                id="notification-kebab-hide"
                role="menuitem"
                tabindex="-1"
              >
                Hide this notification
              </a>
            </li>
          </ul>
        </div>
        <span
          aria-hidden="true"
          class="pficon pficon-ok pull-left"
        />
        <div
          class="drawer-pf-notification-content"
        >
          <span
            class="drawer-pf-notification-message"
          >
            Foreman Community Newsletter - January 2029
          </span>
        </div>
      </div>
      <div
        class="drawer-pf-notification unread"
      >
        <div
          class="dropdown pull-right dropdown-kebab-pf dropdown btn-group"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="dropdown-toggle btn btn-link"
            id="3"
            role="button"
            type="button"
          >
            <span
              aria-hidden="true"
              class="fa fa-ellipsis-v"
            />
          </button>
          <ul
            aria-labelledby="3"
            class="dropdown-menu-right dropdown-menu"
            role="menu"
          >
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                id="notification-kebab-0"
                role="menuitem"
                tabindex="-1"
              >
                Open
              </a>
            </li>
            <li
              class="divider"
              role="separator"
            />
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                id="notification-kebab-hide"
                role="menuitem"
                tabindex="-1"
              >
                Hide this notification
              </a>
            </li>
          </ul>
        </div>
        <span
          aria-hidden="true"
          class="pficon pficon-error-circle-o pull-left"
        />
        <div
          class="drawer-pf-notification-content"
        >
          <span
            class="drawer-pf-notification-message"
          >
            Foreman Community Newsletter - January 2029
          </span>
        </div>
      </div>
      <div
        class="drawer-pf-loading text-center unread"
      >
        <div
          class="spinner spinner-xs spinner-inline"
        />
         Loading More
      </div>
    </div>
    <div
      class="drawer-pf-action"
    >
      <div
        class="drawer-pf-action-link drawer-pf-action-link"
        data-toggle="mark-all-read"
      >
        <button
          class="btn btn-link"
          type="button"
        >
          Mark All Read
        </button>
      </div>
      <div
        class="drawer-pf-action-link"
        data-toggle="clear-all"
      >
        <button
          class="btn btn-link"
          type="button"
        >
          <span
            aria-hidden="true"
            class="pficon pficon-close"
          />
          Clear All
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`StatefulNotificationDrawerWrapper is working properly 1`] = `
<div
  class="drawer-pf drawer-alt-pf drawer-pf-notifications drawer-pf-expanded"
>
  <div
    class="drawer-pf-title"
  >
    <a
      class="drawer-pf-toggle-expand"
    />
    <a
      class="drawer-pf-close"
    >
      <span
        aria-hidden="true"
        class="fa fa-close"
      />
    </a>
    <h3
      class="text-center"
    >
      Notifications
    </h3>
  </div>
  <div
    class="panel-group"
    id="notification-drawer-accordion"
  >
    <div
      class="panel panel-default"
    >
      <div
        class="panel-heading"
      >
        <h4
          class="panel-title"
        >
          <a
            class="collapsed"
          >
            Notification Tab 1
          </a>
        </h4>
        <span
          class="panel-counter"
        >
          0 Unread Events
        </span>
      </div>
      <div
        class="panel-collapse collapse"
        id="1"
      >
        <div
          class="blank-slate-pf"
        >
          <div
            class="blank-slate-pf-icon"
          >
            <span
              aria-hidden="true"
              class="pficon pficon-info"
            />
          </div>
          <h4
            class="h1 blank-slate-pf-title"
          >
            No Notifications Available
          </h4>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`StatefulToggleNotificationDrawerWrapper is working properly 1`] = `
<ul
  class="nav navbar-nav navbar-right navbar-iconic"
>
  <button
    class="nav-item-iconic btn btn-link"
    type="button"
  >
    <span
      aria-describedby="tooltip"
      aria-hidden="true"
      class="fa fa-bell"
    />
  </button>
  <div
    class="drawer-pf drawer-alt-pf drawer-pf-notifications"
  >
    <div
      class="drawer-pf-title"
    >
      <a
        class="drawer-pf-toggle-expand"
      />
      <a
        class="drawer-pf-close"
      >
        <span
          aria-hidden="true"
          class="fa fa-close"
        />
      </a>
      <h3
        class="text-center"
      >
        Notifications
      </h3>
    </div>
    <div
      class="panel-group"
      id="notification-drawer-accordion"
    >
      <div
        class="panel panel-default"
      >
        <div
          class="panel-heading"
        >
          <h4
            class="panel-title"
          >
            <a
              class="collapsed"
            >
              Notification Tab 1
            </a>
          </h4>
          <span
            class="panel-counter"
          >
            0 Unread Events
          </span>
        </div>
        <div
          class="panel-collapse collapse"
          id="1"
        >
          <div
            class="blank-slate-pf"
          >
            <div
              class="blank-slate-pf-icon"
            >
              <span
                aria-hidden="true"
                class="pficon pficon-info"
              />
            </div>
            <h4
              class="h1 blank-slate-pf-title"
            >
              No Notifications Available
            </h4>
          </div>
        </div>
      </div>
    </div>
  </div>
</ul>
`;

exports[`getIconClass is working properly 1`] = `
<div>
  <span
    aria-hidden="true"
    class="pficon pficon-ok"
  />
  <span
    aria-hidden="true"
    class="pficon pficon-info"
  />
  <span
    aria-hidden="true"
    class="pficon pficon-warning-triangle-o"
  />
  <span
    aria-hidden="true"
    class="pficon pficon-error-circle-o"
  />
  <span
    aria-hidden="true"
    class="pficon pficon-close"
  />
  <span
    aria-hidden="true"
    class="pficon pficon-ok"
  />
  <span
    aria-hidden="true"
    class="pficon pficon-glyphicon glyphicon-question-sign"
  />
</div>
`;
